refactor(items): simplify ItemModelData utility class
Minor cleanup in ItemModelData to prevent unnecessary null checks and
streamline the utility class structure.

Summary of changes:

- Mark ItemModelData as a utility class with concise constructor
- Remove redundant null check for CustomModelDataComponent
- Use getFirst() instead of get(0) for better readability